[package]
name = "lambda-flow-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
airtable-flows = "0.1"
http_req_wasi = "0.10"
lambda-flows = "0.2"
slack-flows = "0.2"
serde_json = "1.0"
